--- a/Assets/css/details.css
+++ b/Assets/css/details.css
@@ -57,6 +57,18 @@ ol.breadcrumb {
   font-style: normal;
 }
 
+.search-section .search-bar {
+  border-radius: 15px;
+  height: 45px;
+  background-color: #EFEFEF!important;
+}
+
+.search-section .search-button {
+  border-radius: 15px;
+  width: 100%;
+  height: 45px;
+}
+
 .col-auto {
   margin-left: 20px;
 }
@@ -130,6 +142,81 @@ ol.breadcrumb {
   font-size: 16px;
   font-weight: 300;
   line-height: 27px;
+}
+
+.daftar-hotel .card-hotel {
+  width: 100%;
+  height: 230px;
+  background-color: #EFEFEF;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 24px;
+}
+
+.daftar-hotel .card-hotel .rating,
+.daftar-hotel .card-hotel .price {
+  position: absolute;
+  top: 0;
+  background-color: #f5bf38;
+  color: black;
+  padding: 10px 15px;
+}
+
+.daftar-hotel .card-hotel .rating {
+  left: 0;
+  border-bottom-right-radius: 15px;
+}
+
+.daftar-hotel .card-hotel .price {
+  right: 0;
+  border-bottom-left-radius: 15px;
+}
+
+.daftar-hotel .card-hotel img {
+  width: auto;
+  height: 100%;
+}
+
+.daftar-hotel .card-hotel .layer-shadow {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  color: white!important;
+  padding: 24px;
+  background: linear-gradient(#00000000, rgba(31, 29, 29, 0.664));
+}
+
+.daftar-hotel .card-hotel .layer-shadow :is(h1, h2, h3, h4, h5, h6, h7){
+  color: white;
+}
+
+.pagination .pagination-control {
+  padding: 25px auto;
+  width: 100px;
+  height: 38px;
+  margin: 0 25px;
+  background-color: #f5bf38;
+  border: none;
+}
+
+.pagination .pagination-control.prev {
+  border-top-left-radius: 38px;;
+  border-bottom-left-radius: 38px;;
+}
+
+.pagination .pagination-control.next {
+  border-top-right-radius: 38px;;
+  border-bottom-right-radius: 38px;;
+}
+
+.pagination .pagination-number {
+  background-color: #f5bf38;
+  width: 38px;
+  height: 38px;
+  margin: 0 5px;
+  border: none;
 }
 
 .img-icon img {
