--- a/Assets/css/details.css
+++ b/Assets/css/details.css
@@ -144,9 +144,9 @@ ol.breadcrumb {
   line-height: 27px;
 }
 
-.daftar-hotel .card-hotel {
+.card-hotel {
   width: 100%;
-  height: 230px;
+  max-height: 300px;
   background-color: #EFEFEF;
   border-radius: 15px;
   position: relative;
@@ -154,31 +154,31 @@ ol.breadcrumb {
   margin-bottom: 24px;
 }
 
-.daftar-hotel .card-hotel .rating,
-.daftar-hotel .card-hotel .price {
+.card-hotel .rating,
+.card-hotel .price {
   position: absolute;
   top: 0;
   background-color: #f5bf38;
   color: black;
-  padding: 10px 15px;
+  padding: 10px;
 }
 
-.daftar-hotel .card-hotel .rating {
+.card-hotel .rating {
   left: 0;
   border-bottom-right-radius: 15px;
 }
 
-.daftar-hotel .card-hotel .price {
+.card-hotel .price {
   right: 0;
   border-bottom-left-radius: 15px;
 }
 
-.daftar-hotel .card-hotel img {
-  width: auto;
-  height: 100%;
+.card-hotel img {
+  height: auto;
+  width: 100%;
 }
 
-.daftar-hotel .card-hotel .layer-shadow {
+.card-hotel .layer-shadow {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -188,7 +188,7 @@ ol.breadcrumb {
   background: linear-gradient(#00000000, rgba(31, 29, 29, 0.664));
 }
 
-.daftar-hotel .card-hotel .layer-shadow :is(h1, h2, h3, h4, h5, h6, h7){
+.card-hotel .layer-shadow :is(h1, h2, h3, h4, h5, h6, h7){
   color: white;
 }
 
@@ -219,9 +219,18 @@ ol.breadcrumb {
   border: none;
 }
 
+.detail-hotel .img-wrapper {
+  height: 500px;
+  overflow: hidden;
+}
+
+.detail-hotel .img-wrapper .img-cover{
+  width: 100%;
+  height: auto;
+}
+
 .img-icon img {
   margin-top: 40px;
-  height: 73px !important;
   height: 73px !important;
 }
 
