--- a/Assets/css/details.css
+++ b/Assets/css/details.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #000000;
 }
 
@@ -98,7 +98,7 @@ ol.breadcrumb {
 .search-section .search-bar {
   border-radius: 15px;
   height: 45px;
-  background-color: #EFEFEF !important;
+  background-color: #efefef !important;
 }
 
 .search-section .search-button {
@@ -192,7 +192,7 @@ ol.breadcrumb {
 .card-hotel {
   width: 100%;
   max-height: 300px;
-  background-color: #EFEFEF;
+  background-color: #efefef;
   border-radius: 15px;
   position: relative;
   overflow: hidden;
@@ -248,16 +248,12 @@ ol.breadcrumb {
 
 .pagination .pagination-control.prev {
   border-top-left-radius: 38px;
-  ;
   border-bottom-left-radius: 38px;
-  ;
 }
 
 .pagination .pagination-control.next {
   border-top-right-radius: 38px;
-  ;
   border-bottom-right-radius: 38px;
-  ;
 }
 
 .pagination .pagination-number {
@@ -360,4 +356,112 @@ ol.breadcrumb {
   line-height: 24px;
   margin-top: 42px;
   color: #b0b0b0;
+}
+
+.card-img-top {
+  border: 0px solid black;
+  border-radius: 30px;
+}
+
+.row .col-12 .card .card-body {
+  background-color: #f7f4f4;
+}
+
+.card-body .btn {
+  border-radius: 10px;
+}
+
+.card-deck .card {
+  height: auto;
+  width: 400px;
+}
+
+.card-deck .card .card-img-top {
+  height: 150px;
+  width: 200px;
+}
+
+.card-home {
+  height: 250px;
+  background-color: #efefef;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+  margin-left: 24px;
+}
+
+.card-home .rating,
+.card-home .price {
+  position: absolute;
+  top: 0;
+  background-color: #f5bf38;
+  color: black;
+  padding: 10px;
+}
+
+.card-home .rating {
+  left: 0;
+  border-bottom-right-radius: 15px;
+}
+
+.card-home .price {
+  right: 0;
+  border-bottom-left-radius: 15px;
+}
+
+.card-home .layer-shadow {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  color: white !important;
+  padding: 24px;
+  background: linear-gradient(#00000000, rgba(31, 29, 29, 0.664));
+}
+
+.card-home .layer-shadow :is(h1, h2, h3, h4, h5, h6, h7) {
+  color: white;
+}
+
+.card-news {
+  height: 250px;
+  background-color: #efefef;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+}
+
+.card-news .diskon,
+.card-news .price {
+  position: absolute;
+  top: 0;
+  background-color: #f5bf38;
+  color: black;
+  padding: 10px;
+}
+
+.card-news .diskon {
+  width: 100px;
+  background-color: red;
+  color: white;
+  margin-left: 380px;
+  border-bottom-left-radius: 30px;
+}
+
+.card-news .price {
+  right: 0;
+}
+
+.card-news .layer-shadow {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  color: white !important;
+  padding: 24px;
+  background: linear-gradient(#00000000, rgba(31, 29, 29, 0.664));
+}
+
+.card-news .layer-shadow :is(h1, h2, h3, h4, h5, h6, h7) {
+  color: white;
 }
