--- a/Assets/css/details.css
+++ b/Assets/css/details.css
@@ -132,14 +132,14 @@ ol.breadcrumb {
 
 .booking-wrapper {
   margin-top: 50px;
-  margin-left: 58px;
+  margin-left: 50px;
   width: 462px;
   height: 324px;
   border-radius: 15px;
 }
 
 .booking-title {
-  padding-left: 64px;
+  padding-left: 55px;
   margin-top: 30px;
   font-weight: 500;
   line-height: 30px;
@@ -147,14 +147,14 @@ ol.breadcrumb {
 
 .booking-price {
   margin-top: 14px;
-  margin-left: 64px;
+  margin-left: 55px;
   line-height: 54px;
   font-size: 30px;
   font-style: normal !important;
 }
 
 .booking-promo {
-  margin-left: 64px;
+  margin-left: 55px;
   margin-top: 5px;
   font-weight: 300;
   font-style: normal !important;
@@ -163,11 +163,11 @@ ol.breadcrumb {
 }
 
 .booking-button {
-  margin-left: 64px;
-  margin-top: 25px;
-  color: #f0b828;
+  margin-left: 55px;
+  margin-top: 20px;
   width: 309px;
   height: 50px;
+  text-decoration: none !important;
 }
 
 .about-wrapper {
